cmd/miningpool-middleware/k8s/02-miningpool-middleware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miningpool-middleware
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miningpool-middleware
  template:
    metadata:
      labels:
        app: miningpool-middleware
    spec:
      containers:
        - name: miningpool-middleware
          image: uhub.service.ucloud.cn/entropypool/miningpool-middleware:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/MiningPoolMiddleware
      volumes:
        - name: service-config
          configMap:
            name: miningpool-middleware-config
            items:
              - key: service-conf
                path: MiningPoolMiddleware.viper.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miningpool-middleware
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 50850
      targetPort: 50850
    - name: grpc
      port: 50851
      targetPort: 50851
    - name: healthz
      port: 50852
      targetPort: 50852
    - name: prometheus
      port: 50853
      targetPort: 50853
  selector:
    app: miningpool-middleware
