cmd/miningpool-middleware/k8s/05-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: miningpool-middleware-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: miningpool-middleware-traefik-app
    k8s.kuboard.cn/workload: miningpool-middleware-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-miningpool-middleware-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd
spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/miningpoolmw/v1/miningpool_DeleteFractionWithdrawal
            backend:
              serviceName: miningpool-middleware
              servicePort: 50850
          - path: /api/miningpoolmw/v1/miningpool_CreateOrderUser
            backend:
              serviceName: miningpool-middleware
              servicePort: 50850
          - path: /api/miningpoolmw/v1/miningpool_DeleteOrderUser
            backend:
              serviceName: miningpool-middleware
              servicePort: 50850
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.development.npool.top
      http: *http_rules
